--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -7,6 +7,7 @@
     Room No. {{ reservation.roomNumber }} <br />
     Check-In: {{ reservation.checkInDate }} <br />
     Check-Out: {{ reservation.checkOutDate }} <br />
+    <button [routerLink]="['/edit', reservation.id]">Edit</button>
     <button (click)="deleteReservation(reservation.id)">Delete</button>
   </li>
 </ul>
